# chemical-parameter-sharing

./: .gitignore  .gitmodules  Clustering.ipynb  Fingerprints.ipynb  LICENSE  Makefile  Modelling.html  Modelling.ipynb  Modelling_old.html  README.md  TODO  USPTO_cleaning.ipynb  USPTO_cleaning.py  USPTO_extraction.py  USPTO_preprocessing.ipynb  USPTO_preprocessing.py  clustering.ipynb  coley_main.py  data.py  data_visual.py  env-dev.yml  env-modelling.yml  exp_coley_hard_vs_soft_selection.py  exp_coley_soft_selection.py  exp_impact_of_extra_losses.py  exp_model_per_rxn_superclass.py  exp_model_per_target.py  exp_ohe_to_fingerprint.py  exp_reactant_product_reaction.py  exp_single_model.py  fingerprint.py  fit.py  gen_smi_files.ipynb  main.py  main_coley.py  manual_cleaning.ipynb  model.py  modelling.py  modelling_2.ipynb  modelling_3.ipynb  (+7 more)
USPTO_handling/: read_USPTO.ipynb
condition_prediction/: data_generator.py  run.py  upstream_model.py
config/: single_vs_multi.py
gao_condition_prediction/: run.py
gao_model/: __main__.py  data_generator.py  gao_model.py  run.py
initial_results/: test_metrics-c-c.json  test_metrics-fgi.json  test_metrics-reductions.json
notebooks/: clustering.ipynb  find_hydrogenation.ipynb  gen_smi_files.ipynb  inspect_data.ipynb  record_results.ipynb
ps_model/: README.md  __main__.py  data_generator.py  gao_model.py  multi_ps_model.py  run.py  upstream_model.py
results/: freq_informed_acc-c-c.json  freq_informed_acc-fgi.json  freq_informed_acc-reductions.json
src/: get_data.py  main.py  open_data.py  reaction_smiles_test_case.py  tmp.py
tests/: conftest.py  test_forward_pass.py
(+74 files in other folders)
