[tool.poetry]
name = "chemical-parameter-sharing"
version = "0.1.0"
description = ""
authors = ["JA"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
scikit-learn = "^1.2.1"
seaborn = "^0.12.2"
pandas = "^1.5.3"
tqdm = "^4.64.1"
torchmetrics = "^0.11.1"
tensorboard = "^2.12.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.6.1"
black = "^23.1.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
