[tool.poetry]
name = "ps_model"
version = "1.0.0"
description = ""
authors = [
    "Joe Arrowsmith <joearrowsmith98@gmail.com>",
    "Kobi Felton <kobi.c.f@gmail.com>",
    "Daniel Wigh <dswigh@gmail.com>",
]

# NB installing tensorflow with poetry won't work on my mac studio with an M1 chip for some reason, so have to remove it from the toml file and install it separately
# conda install -y -c apple tensorflow-deps
# python -m pip install tensorflow-macos tensorflow-metal

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
#tensorflow = { version = "^2.12.0"}
#tensorflow-macos = { version = "^2.12.0", platform = "darwin" }/
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
click = "^8.1.3"
scikit-learn = "^1.2.2"
pandas = "^1.5.3"
pyarrow = "^10.0.1"
Counter = "^1.0.0"
rdkit = "^2023.3.1"
wandb = "^0.15.3"
pyyaml = "^6.0"
types-pyyaml = "^6.0.12.10"
pqdm = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
mypy = "^1.3.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
